Avoid gaps in timeline column

--- a/assets/styles/vitae/_templates.scss
+++ b/assets/styles/vitae/_templates.scss
@@ -56,11 +56,6 @@
       // outline: 1px dashed green;
       margin-bottom: var(--inner_margin_4-2);
     }
-
-    .slot_main {
-      // outline: 1px dashed red;
-      gap: var(--inner_margin_4-1) var(--inner_margin_4-2);
-    }
   }
 }
 
